Fix title visibility when no banner

--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@
   width: calc(100% + 145px);
 }
 
+body:not(.site-theme-dark) .amc--nobannerimage .amc_title {
+  color: rgb(var(--color-text));
+}
+
 .amc_title a:hover {
   color: inherit;
 }
